# zetamarkets-py

./: .gitignore  .readthedocs.yaml  README.md  poetry.toml  pyproject.toml
docs/: README.md
docs/source/: conf.py  examples.rst  index.rst  usage.rst
docs/source/examples/: check_risk.rst  market_maker.rst  place_order.rst  subscribe_account.rst  subscribe_event.rst  subscribe_orderbook.rst  subscribe_transaction.rst
docs/source/reference/: modules.rst  zetamarkets_py.rst  zetamarkets_py.serum_client.accounts.rst  zetamarkets_py.serum_client.rst  zetamarkets_py.serum_client.types.rst  zetamarkets_py.zeta_client.accounts.rst  zetamarkets_py.zeta_client.errors.rst  zetamarkets_py.zeta_client.instructions.rst  zetamarkets_py.zeta_client.rst  zetamarkets_py.zeta_client.types.rst
examples/: check_risk.py  funding.py  market_maker.py  place_multi_order.py  place_order.py  subscribe_account.py  subscribe_event.py  subscribe_orderbook.py  subscribe_transaction.py  withdraw.py
zeta_py/: accounts.py  assets.py  client.py  clock.py  constants.py  db.py  events.py  exchange.py  main.py  market.py  orderbook.py  pda.py  program_account.py  subexchange.py  types.py  utils.py
zeta_py/_layouts/: clock.py
zeta_py/idl/: zeta.json
zeta_py/market_store/: market-store.devnet.json  market-store.mainnet.json
zeta_py/notebooks/: binance.ipynb  example_usage copy.ipynb  example_usage.ipynb  perspective.ipynb  serum_layouts.ipynb  test.ipynb  websockets.ipynb
zeta_py/pyserum/: async_connection.py  async_open_orders_account.py  async_utils.py  connection.py  enums.py  instructions.py  open_orders_account.py  utils.py
zeta_py/pyserum/_layouts/: account_flags.py  market.py  queue.py  slab.py
zeta_py/pyserum/market/: __init__.py  async_market.py  core.py  market.py  orderbook.py  state.py  types.py
zeta_py/serum_client/: program_id.py
zeta_py/serum_client/accounts/: market_state.py  open_orders.py  queue.py
zeta_py/serum_client/types/: __init__.py  account_flags.py  queue.py  slab.py
zeta_py/zeta_client/: README.md  program_id.py
zeta_py/zeta_client/accounts/: __init__.py  cross_margin_account.py  cross_margin_account_manager.py  cross_open_orders_map.py  greeks.py  insurance_deposit_account.py  margin_account.py  market_indexes.py  market_node.py  open_orders_map.py  perp_sync_queue.py  pricing.py  referral_account.py  referrer_account.py  referrer_alias.py  settlement_account.py  socialized_loss_account.py  spread_account.py  state.py  underlying.py  whitelist_deposit_account.py  whitelist_insurance_account.py  whitelist_trading_fees_account.py  zeta_group.py
zeta_py/zeta_client/errors/: __init__.py  custom.py
zeta_py/zeta_client/instructions/: __init__.py  add_market_indexes.py  add_perp_market_index.py  apply_perp_funding.py  burn_vault_tokens.py  cancel_all_market_orders.py  cancel_order.py  cancel_order_by_client_order_id.py  cancel_order_by_client_order_id_no_error.py  cancel_order_halted.py  cancel_order_no_error.py  claim_referrals_rewards.py  clean_zeta_market_halted.py  clean_zeta_markets.py  close_cross_margin_account.py  close_cross_margin_account_manager.py  close_margin_account.py  close_open_orders.py  close_open_orders_v2.py  close_open_orders_v3.py  close_spread_account.py  collect_treasury_funds.py  crank_event_queue.py  deposit.py  deposit_insurance_vault.py  deposit_insurance_vault_v2.py  deposit_v2.py  edit_delegated_pubkey.py  expire_series.py  expire_series_override.py  force_cancel_order_by_order_id.py  force_cancel_order_by_order_id_v2.py  force_cancel_orders.py  force_cancel_orders_v2.py  halt.py  initialize_combined_insurance_vault.py  initialize_combined_socialized_loss_account.py  initialize_combined_vault.py  initialize_cross_margin_account.py  initialize_cross_margin_account_manager.py  (+68 more)
zeta_py/zeta_client/types/: __init__.py  anchor_decimal.py  asset.py  cross_margin_account_info.py  expire_series_override_args.py  expiry_series.py  expiry_series_status.py  halt_args.py  halt_state.py  halt_state_args.py  halt_state_v2.py  initialize_market_args.py  initialize_market_node_args.py  kind.py  (+34 more)
zetamarkets_py/: blockhash_cache.py  client.py  constants.py  events.py  exchange.py  market.py  orderbook.py  pda.py  risk.py  types.py  utils.py  websocket_api.py
zetamarkets_py/idl/: zeta.json
zetamarkets_py/notebooks/: example_usage.ipynb  mm.ipynb  perspective.ipynb  websockets.ipynb
(+154 files in other folders)
