[tool.poetry]
name = "zetamarkets_py"
version = "0.2.65"
description = "Python SDK for Zeta Markets"
license = "apache-2.0"
authors = ["Tristan0x <tristan@sierra.team>"]
readme = "README.md"
repository = "https://github.com/zetamarkets/zetamarkets-py"
packages = [
    { include = "zetamarkets_py" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
solana = "^0.34.0"
solders = "^0.21.0"
anchorpy = "^0.20.1"
colorlog = "^6.7.0"
deprecated = "^1.2.14"
jsonrpcclient = "^4.0.3"
jito_searcher_client = "^0.1.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.22.1"
ruff = "^0.0.284"
isort = "^5.12.0"
black = "^22.3.0"
mypy = "^1.5.1"
anchorpy = {version = "^0.20.1", extras = ["cli"]}

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
python-dotenv = "^1.0.0"
python-binance = "^1.0.19"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2023.9.10"

[tool.poetry.extras]

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
black = "black zetamarkets_py examples"
isort = "isort zetamarkets_py examples"
format = ["black", "isort"]
lint = "ruff check zetamarkets_py examples"
mypy = "mypy zetamarkets_py examples"
docs = "make -C docs html"

[tool.ruff]
line-length=120
exclude = ["zetamarkets_py/zeta_client", "zetamarkets_py/serum_client" , "zetamarkets_py/solana_client", ".venv"]

[tool.black]
line-length=120

[tool.isort]
profile = "black"
skip = []

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
